--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demo
+
+spring.jpa.show-sql = true
+
+spring.datasource.username = postgres
+spring.datasource.password = 123456
+spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
